--- a/card.html
+++ b/card.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Profile Page</title>
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" href="card.css">
     <script src="https://kit.fontawesome.com/d7076c4cfe.js" crossorigin="anonymous"></script>
 </head>
