--- a/index.html
+++ b/index.html
@@ -15,13 +15,14 @@
         <li><a href="contact.html">Contact</a></li>
         <li><a href="education.html">Education</a></li>
         <li><a href="https://github.com/ShamsiyyaAlakbarova">My GitHub</a></li>
+        <li><a href="https://github.com/ShamsiyyaAlakbarova/Web-and-Mobile">GitHub Page</a></li>
       </ul>
       </div>
 
     <h1>Shamsiyya Alakbarova</h1>
     <table>
         <tr>
-    <th><img src="../Работа/400x4005.png" width="150px" alt="Me"></th> 
+    <th><img src="../Web-and-Mobile/400x4005.png" width="150px" alt="Me"></th> 
     <th><p>Hello! My name is Shamsiyya Alakbarova, i am 19 years old. I study at the ADA University. This is my digital resume. </p></th>
     </tr>
     </table>
