--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <li><a href="education.html">Education</a></li>
         <li><a href="https://github.com/ShamsiyyaAlakbarova">My GitHub</a></li>
         <li><a href="https://github.com/ShamsiyyaAlakbarova/Web-and-Mobile">GitHub Page</a></li>
+        <li><a href="weatherapp.html">Weather App</a></li>
       </ul>
       </div>
 
